@@ -60,32 +60,28 @@ class Ui_Qwad(object):
         self.label.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.label.setObjectName("label")
         self.gridLayout.addWidget(self.label, 0, 0, 1, 1)
-        self.TitleID = QtGui.QLineEdit(self.widget)
-        self.TitleID.setReadOnly(True)
+        self.TitleID = QtGui.QLabel(self.widget)
         self.TitleID.setObjectName("TitleID")
         self.gridLayout.addWidget(self.TitleID, 0, 1, 1, 1)
         self.label_9 = QtGui.QLabel(self.widget)
         self.label_9.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.label_9.setObjectName("label_9")
         self.gridLayout.addWidget(self.label_9, 0, 2, 1, 2)
-        self.idASCII = QtGui.QLineEdit(self.widget)
-        self.idASCII.setReadOnly(True)
+        self.idASCII = QtGui.QLabel(self.widget)
         self.idASCII.setObjectName("idASCII")
         self.gridLayout.addWidget(self.idASCII, 0, 4, 1, 1)
         self.label_3 = QtGui.QLabel(self.widget)
         self.label_3.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.label_3.setObjectName("label_3")
         self.gridLayout.addWidget(self.label_3, 1, 0, 1, 1)
-        self.Version = QtGui.QLineEdit(self.widget)
-        self.Version.setReadOnly(True)
+        self.Version = QtGui.QLabel(self.widget)
         self.Version.setObjectName("Version")
         self.gridLayout.addWidget(self.Version, 1, 1, 1, 1)
         self.label_5 = QtGui.QLabel(self.widget)
         self.label_5.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.label_5.setObjectName("label_5")
         self.gridLayout.addWidget(self.label_5, 1, 3, 1, 1)
-        self.TitleType = QtGui.QLineEdit(self.widget)
-        self.TitleType.setReadOnly(True)
+        self.TitleType = QtGui.QLabel(self.widget)
         self.TitleType.setObjectName("TitleType")
         self.gridLayout.addWidget(self.TitleType, 1, 4, 1, 1)
         self.label_2 = QtGui.QLabel(self.widget)
@@ -96,35 +92,38 @@ class Ui_Qwad(object):
         self.label_6.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.label_6.setObjectName("label_6")
         self.gridLayout.addWidget(self.label_6, 2, 3, 1, 1)
-        self.GroupID = QtGui.QLineEdit(self.widget)
-        self.GroupID.setReadOnly(True)
+        self.GroupID = QtGui.QLabel(self.widget)
         self.GroupID.setObjectName("GroupID")
         self.gridLayout.addWidget(self.GroupID, 2, 4, 1, 1)
         self.label_4 = QtGui.QLabel(self.widget)
         self.label_4.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.label_4.setObjectName("label_4")
         self.gridLayout.addWidget(self.label_4, 3, 0, 1, 1)
-        self.BootIndex = QtGui.QLineEdit(self.widget)
-        self.BootIndex.setReadOnly(True)
+        self.BootIndex = QtGui.QLabel(self.widget)
         self.BootIndex.setObjectName("BootIndex")
         self.gridLayout.addWidget(self.BootIndex, 3, 1, 1, 1)
         self.label_7 = QtGui.QLabel(self.widget)
         self.label_7.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.label_7.setObjectName("label_7")
         self.gridLayout.addWidget(self.label_7, 3, 3, 1, 1)
-        self.AccessRights = QtGui.QLineEdit(self.widget)
-        self.AccessRights.setReadOnly(True)
+        self.AccessRights = QtGui.QLabel(self.widget)
         self.AccessRights.setObjectName("AccessRights")
         self.gridLayout.addWidget(self.AccessRights, 3, 4, 1, 1)
         self.label_8 = QtGui.QLabel(self.widget)
         self.label_8.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
         self.label_8.setObjectName("label_8")
         self.gridLayout.addWidget(self.label_8, 4, 0, 1, 1)
-        self.Contents = QtGui.QLineEdit(self.widget)
-        self.Contents.setReadOnly(True)
+        self.Contents = QtGui.QLabel(self.widget)
         self.Contents.setObjectName("Contents")
         self.gridLayout.addWidget(self.Contents, 4, 1, 1, 1)
-        self.IOSversion = QtGui.QComboBox(self.widget)
+        self.label_10 = QtGui.QLabel(self.widget)
+        self.label_10.setAlignment(QtCore.Qt.AlignRight|QtCore.Qt.AlignTrailing|QtCore.Qt.AlignVCenter)
+        self.label_10.setObjectName("label_10")
+        self.gridLayout.addWidget(self.label_10, 4, 3, 1, 1)
+        self.Reserved = QtGui.QLabel(self.widget)
+        self.Reserved.setObjectName("Reserved")
+        self.gridLayout.addWidget(self.Reserved, 4, 4, 1, 1)
+        self.IOSversion = QtGui.QLabel(self.widget)
         self.IOSversion.setObjectName("IOSversion")
         self.gridLayout.addWidget(self.IOSversion, 2, 1, 1, 1)
         self.packtab = QtGui.QWidget()
@@ -240,17 +239,16 @@ class Ui_Qwad(object):
         self.tabWidget.setTabText(self.tabWidget.indexOf(self.unpacktab), QtGui.QApplication.translate("Qwad", "Unpack WAD", None, QtGui.QApplication.UnicodeUTF8))
         self.TMDfilebutton.setToolTip(QtGui.QApplication.translate("Qwad", "Ruta hacia el archivo WAD que quieres desempaquetar", None, QtGui.QApplication.UnicodeUTF8))
         self.TMDfilebutton.setText(QtGui.QApplication.translate("Qwad", "TMD file", None, QtGui.QApplication.UnicodeUTF8))
-        self.label.setText(QtGui.QApplication.translate("Qwad", "Title ID", None, QtGui.QApplication.UnicodeUTF8))
-        self.TitleID.setText(QtGui.QApplication.translate("Qwad", "0000000000000000", None, QtGui.QApplication.UnicodeUTF8))
-        self.label_9.setText(QtGui.QApplication.translate("Qwad", "ID (ascii)", None, QtGui.QApplication.UnicodeUTF8))
-        self.label_3.setText(QtGui.QApplication.translate("Qwad", "Version", None, QtGui.QApplication.UnicodeUTF8))
-        self.Version.setText(QtGui.QApplication.translate("Qwad", "0", None, QtGui.QApplication.UnicodeUTF8))
-        self.label_5.setText(QtGui.QApplication.translate("Qwad", "Title type", None, QtGui.QApplication.UnicodeUTF8))
-        self.label_2.setText(QtGui.QApplication.translate("Qwad", "IOS needed", None, QtGui.QApplication.UnicodeUTF8))
-        self.label_6.setText(QtGui.QApplication.translate("Qwad", "Group ID", None, QtGui.QApplication.UnicodeUTF8))
-        self.label_4.setText(QtGui.QApplication.translate("Qwad", "Boot index", None, QtGui.QApplication.UnicodeUTF8))
-        self.label_7.setText(QtGui.QApplication.translate("Qwad", "Access rights", None, QtGui.QApplication.UnicodeUTF8))
-        self.label_8.setText(QtGui.QApplication.translate("Qwad", "Contents", None, QtGui.QApplication.UnicodeUTF8))
+        self.label.setText(QtGui.QApplication.translate("Qwad", "Title ID:", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_9.setText(QtGui.QApplication.translate("Qwad", "Title ID (ascii):", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_3.setText(QtGui.QApplication.translate("Qwad", "Title Version:", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_5.setText(QtGui.QApplication.translate("Qwad", "Title Type:", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_2.setText(QtGui.QApplication.translate("Qwad", "Required IOS:", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_6.setText(QtGui.QApplication.translate("Qwad", "Group ID:", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_4.setText(QtGui.QApplication.translate("Qwad", "Boot index:", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_7.setText(QtGui.QApplication.translate("Qwad", "Access rights:", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_8.setText(QtGui.QApplication.translate("Qwad", "Contents:", None, QtGui.QApplication.UnicodeUTF8))
+        self.label_10.setText(QtGui.QApplication.translate("Qwad", "Reserved:", None, QtGui.QApplication.UnicodeUTF8))
         self.tabWidget.setTabText(self.tabWidget.indexOf(self.TMDviewer), QtGui.QApplication.translate("Qwad", "TMD viewer", None, QtGui.QApplication.UnicodeUTF8))
         self.BotonRutaEmpaquetado.setToolTip(QtGui.QApplication.translate("Qwad", "Carpeta y nombre del nuevo WAD", None, QtGui.QApplication.UnicodeUTF8))
         self.BotonRutaEmpaquetado.setText(QtGui.QApplication.translate("Qwad", "Output", None, QtGui.QApplication.UnicodeUTF8))
@@ -261,22 +259,18 @@ class Ui_Qwad(object):
         self.Download_from_NUS.setText(QtGui.QApplication.translate("Qwad", "Download", None, QtGui.QApplication.UnicodeUTF8))
         self.NusOutputButton.setToolTip(QtGui.QApplication.translate("Qwad", "Carpeta y nombre del nuevo WAD", None, QtGui.QApplication.UnicodeUTF8))
         self.NusOutputButton.setText(QtGui.QApplication.translate("Qwad", "Output", None, QtGui.QApplication.UnicodeUTF8))
-        self.enteredTitleID.setText(QtGui.QApplication.translate("Qwad", "000000000000000000", None, QtGui.QApplication.UnicodeUTF8))
         self.TitleIDlabel.setText(QtGui.QApplication.translate("Qwad", "Title ID", None, QtGui.QApplication.UnicodeUTF8))
         self.Title.setText(QtGui.QApplication.translate("Qwad", "Choose title:", None, QtGui.QApplication.UnicodeUTF8))
         self.comboBox.setItemText(0, QtGui.QApplication.translate("Qwad", "Choose IOS", None, QtGui.QApplication.UnicodeUTF8))
         self.comboBox2.setItemText(0, QtGui.QApplication.translate("Qwad", "Choose Channel/Menu", None, QtGui.QApplication.UnicodeUTF8))
         self.decryptCheck.setText(QtGui.QApplication.translate("Qwad", "Decrypt", None, QtGui.QApplication.UnicodeUTF8))
-        self.pack_in_WAD_checkbox.setText(QtGui.QApplication.translate("Qwad", "Pack into WAD", None, QtGui.QApplication.UnicodeUTF8))
-        self.VersionlineEdit.setText(QtGui.QApplication.translate("Qwad", "unset", None, QtGui.QApplication.UnicodeUTF8))
+        self.pack_in_WAD_checkbox.setText(QtGui.QApplication.translate("Qwad", "Pack as WAD", None, QtGui.QApplication.UnicodeUTF8))
         self.versionlabel.setText(QtGui.QApplication.translate("Qwad", "Version:", None, QtGui.QApplication.UnicodeUTF8))
         self.availableLabel.setText(QtGui.QApplication.translate("Qwad", "Available Versions:", None, QtGui.QApplication.UnicodeUTF8))
-        self.availableVersions.setText(QtGui.QApplication.translate("Qwad", "unset", None, QtGui.QApplication.UnicodeUTF8))
         self.tabWidget.setTabText(self.tabWidget.indexOf(self.NUStab), QtGui.QApplication.translate("Qwad", "Download from NUS", None, QtGui.QApplication.UnicodeUTF8))
         self.menuAyuda.setTitle(QtGui.QApplication.translate("Qwad", "Help", None, QtGui.QApplication.UnicodeUTF8))
         self.actionAcerca_de_Qwad.setText(QtGui.QApplication.translate("Qwad", "About Qwad", None, QtGui.QApplication.UnicodeUTF8))
         self.actionAbout_Qt.setText(QtGui.QApplication.translate("Qwad", "About Qt", None, QtGui.QApplication.UnicodeUTF8))
-        self.actionAbout_Wii_Signer.setText(QtGui.QApplication.translate("Qwad", "About Wii Signer", None, QtGui.QApplication.UnicodeUTF8))
 
 import Qwad_rc
 
